added canvas div

--- a/index.html
+++ b/index.html
@@ -49,16 +49,8 @@
 
         <!-- The game is displayed here, using canvas -->
         <div class="game">
-            
-            <div id="player1" class="player-image">
-                <img src="/assets/dino_transparent.png" alt="player1">
-            </div>
-
-            <div id="player2" class="player-image">
-                <img src="/assets/dino_transparent.png" alt="player2">
-            </div>
+            <canvas></canvas>
         </div>
-
         
 
     </div>
@@ -66,6 +58,7 @@
     <!-- TODO: add instructions div to show how to play game using keyboards -->
 
     <!-- Add link to script file here when made-->
+    <script> src="index.js"</script>
 </body>
 
 </html>
