added container for displaying game result (game over)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <p>Click Anywhere or Press Enter to Play</p>
         </div>
 
-        <div id="canvas-container">
-            <canvas></canvas>
+        <div>
+            <canvas id="canvas-container"></canvas>
         </div>
 
         
@@ -46,7 +46,10 @@
                 <div id="player2-healthbar" class="healthbar"></div>
             </div>
         </div>
-        <div id="result-message"></div>
+        <div id="game-over-container">
+            <div id="result-message" class="game-over-container-item"></div>
+            <button id="replay-button" class="game-over-container-item">REPLAY</button>
+        </div>
     </div>
 
     <div class="information">
