Added index.js file as module

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <!-- TODO: add instructions div to show how to play game using keyboards -->
 
     <!-- Add link to script file here when made-->
-    <script src="js/classes.js"></script>
-    <script src="index.js"></script>
+    <!-- <script src="classes.js"></script> -->
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
