--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!-- Course: SENG 513 -->
 <!-- Date: Oct 23, 2023 -->
-<!-- Assignment 2 -->
+<!-- Assignment 2 - Part 2 -->
 <!-- Name: Anish Pokhrel -->
 <!-- UCID: 30115576 -->
 
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,6 +49,8 @@
                 <div id="player2-healthbar" class="healthbar"></div>
             </div>
         </div>
+
+        <!-- Contains message and 'replay' button when winner is determined -->
         <div id="game-over-container">
             <div id="result-message" class="game-over-container-item"></div>
             <button id="replay-button" class="game-over-container-item">REPLAY</button>
